syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc_examples_airpollution";
option java_outer_classname = "airPollutionServiceImpl";

package alertService;

// The greeting service definition.
service alertUser {
  // Sends a greeting
  rpc WorstAirPollution (WorstRequest) returns (WorstResponse) {}
}

// The request message containing the user's name.
message WorstRequest {
  string countryName = 1;
}

// The response message containing the greetings
message WorstResponse {
  string countryInfo = 1;
}